k8s/front-end-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 5173
      targetPort: 5173
